--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rusThello"
 version = "0.1.0"
 authors = ["unonao <naokiuno634@gmail.com>"]
 edition = "2018"
+description = "Clap Example CLI"
 
 [dependencies]
 nom = "5"
