--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ nom = "5"
 rand = "0.7"
 lazy_static = "1.3.0"
 clap = "2.33.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
